--- a/.github /workflows/deploy.yml
+++ b/.github /workflows/deploy.yml
@@ -2,9 +2,7 @@ name: Docker CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:  # <-- Allows manual trigger
+    branches: [ main ]
 
 jobs:
   build-test-deploy:
